add apis members
